# rag-revamped

./: .env.example  .gitignore  README.md  colab.ipynb  log.csv  pyproject.toml  qa_examples.txt  todo.md
benchmarks/: benchmark_embedding.py  benchmark_llm.py  results_embeddings.txt  results_llm.txt
evals/: collect.py  evaluate.py  metrics.py  utils.py
src/: main.py  prompt.py  settings.py
src/core/: generation.py  indexing.canary.py  indexing.py  pipeline.py
src/lib/: helpers.py  prompts.py  schemas.py  settings.py  types.py  vectordb.py
src/lib/models/: embedding.py  llm.py  rerank.py
src/models/: embedding.py  llm.py  rerank.py
src/rag/: generator.py  indexing.py  main.py  prompt.py  settings.py  vectordb.py
src/rag/models/: embedding.py  llm.py  rerank.py  test.py
src/rag/rag/: generator.py  indexing.py  vectordb.py
src/rag/ui/: chatui.py
src/ui/: chatui.py  logic.py
src/utils/: helpers.py  types.py
tests/: test_eval_metrics.py
tests/benchmarks/: benchmark_embedding.py  benchmark_llm.py  results_embeddings.txt  results_llm.txt
tests/core/: test_generation.py  test_pipeline.py
tests/evals/: retrieval.py
tests/evals/utils/: retrieval_metrics.py  test_retrival_metrics.py
tests/lib/: test_vectordb.py
tests/lib/models/: test_embedding.py  test_llm.py
tests/models/: test_embedding.py  test_llm.py
