[project]
name = "rag"
version = "0.8"
description = ""
readme = "README.md"
authors = [{ name = "strange", email = "rivasjoaquin02@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "docling==2.15.1",
    "flagembedding==1.3.4",
    "gradio==5.21.0",
    "langchain==0.3.21",
    "numpy==1.26.4",
    "pymupdf==1.25.4",
    "pytest==8.3.5",
    "python-dotenv==1.0.1",
    "vllm==0.8.1",
]

[project.scripts]
main = "rag:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["E501"]  # Enforce line length rule
