[project]
name = "rag"
version = "0.9.1"
description = ""
readme = "README.md"
authors = [{ name = "strange", email = "rivasjoaquin02@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "docling==2.15.1",
    "flagembedding==1.3.4",
    "gradio==5.21.0",
    "langchain==0.3.21",
    "numpy==1.26.4",
    "pymupdf==1.25.4",
    "pytest==8.3.5",
    "python-dotenv==1.0.1",
    "python-json-logger==3.3.0",
    "ragas==0.2.15",
    "tiktoken==0.9.0",
    "vllm==0.8.5",
]

[project.scripts]
main = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/core",
    "src/lib",
]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["E501"]  # Enforce line length rule
